--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=venue-booking-backend
-spring.datasource.url=jdbc:mysql://localhost:3306/venue_booking
-spring.datasource.username=root
-spring.datasource.password=Shreya@020404
+spring.datasource.url=jdbc:mysql://mysql-shreya020404-3aff.l.aivencloud.com:24497/venue_booking
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_911zNr0Es5SudOSuQWg
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.web.cors.allow-credentials=true
